# caliper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/helios/: __init__.py  config.py  db.py  errors.py  llm.py  main.py  models.py  schemas.py  verifier.py
backend/helios/agent/: __init__.py  cli.py  client.py  review.py  tool_schema.py
backend/helios/analysis/: fix_generator.py  llm_audit.py  quantum_router.py  route_classifier.py  static.py  test_synthesizer.py
backend/helios/api/: audit.py  demo.py  fix.py  live.py  route.py  sessions.py  verify.py
backend/helios/demo/fixtures/: mc_2deg_thermo_init.py  mc_2deg_thermo_refactored.py  payloads.py  wrong_vs_correct_viz.py
backend/helios/detector/: __init__.py  scientific.py
backend/helios/execution/: compare.py  sandbox.py
backend/helios/live/: __init__.py  cache.py  inflight.py  ratelimit.py  stats.py
backend/helios/mcp_server/: __init__.py  server.py
backend/helios/prompts/: audit.v1.txt  fix.v1.txt  refactor.v1.txt  route.v1.txt  test_synth.v1.txt
backend/tests/: test_agent.py  test_compare.py  test_detector.py  test_health.py  test_live.py  test_mcp.py  test_route_classifier.py  test_sandbox.py  test_static.py
backend/tests/fixtures/: integrate_off_by_one.py
web/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: layout.tsx  page.tsx
web/components/: BackgroundCanvas.tsx  DiffView.tsx  (+9 more)
(+20 files in other folders)
