[project]
name = "helios"
version = "0.1.0"
description = "Helios — correctness layer for scientific code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "libcst>=1.1",
    "numpy>=1.26",
    "google-genai>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
helios-review = "helios.agent.cli:main"
helios-mcp = "helios.mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["helios*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
